--- a/sign/package.json
+++ b/sign/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "js-md5": "^0.7.3",
+    "vant": "^2.12.29",
     "vue": "^2.6.11"
   },
   "devDependencies": {
