--- a/sign/package.json
+++ b/sign/package.json
@@ -11,7 +11,9 @@
     "animate.css": "^4.1.1",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "js-base64": "^3.7.2",
     "js-md5": "^0.7.3",
+    "jsencrypt": "^3.2.1",
     "vant": "^2.12.29",
     "vue": "^2.6.11"
   },
